# ComfyUI-Openrouter_node

./: .gitignore  LICENSE  README.md  __init__.py  chat_manager.py  manage_chats.py  node.py  openrouter_api_key.json.example  openrouter_catalog.py  pyproject.toml  requirements.txt  video_node.py
docs/: etude_faisabilite_openrouter_video.md  openrouter_video_feasibility_study.md
examples/: chat_mode_example.json
tests/: test_request_timeout.py
web/: openrouter_chat_controls.js  openrouter_dynamic_inputs.js  openrouter_video_controls.js
